--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
 asgiref==3.3.4
+boto3==1.17.55
+botocore==1.20.55
+dj-database-url==0.5.0
 Django==3.2
 django-extensions==3.1.2
+django-on-heroku==1.1.2
+jmespath==0.10.0
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
+python-dateutil==2.8.1
 pytz==2021.1
+s3transfer==0.4.1
+six==1.15.0
 sqlparse==0.4.1
+urllib3==1.26.4
+whitenoise==5.2.0
