--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.5.0
 Django==3.2
 django-extensions==3.1.2
 django-on-heroku==1.1.2
+gunicorn==20.1.0
 jmespath==0.10.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
